Securityquestion box now displays correctly while in dark mode.

--- a/Shared/css/blackTheme.css
+++ b/Shared/css/blackTheme.css
@@ -574,6 +574,7 @@ body {
 .logoutBox,
 .formBox,
 .markdown,
+.showsecurityquestion,
 #mrkdwntxt{
   background-color: var(--color-background);
   color: var(--color-text-light);
